Delete function implemented
created delete class who deletes the original page (for now) automatically when selected to delete

--- a/VEEAM Test Task.csproj
+++ b/VEEAM Test Task.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassCreate.cs" />
-    <Compile Include="PathConfig\pathing.cs" />
+    <Compile Include="DeleteControl.cs" />
     <Compile Include="MainSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
