--- a/VEEAM Test Task.csproj
+++ b/VEEAM Test Task.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DeleteControl.cs" />
     <Compile Include="MainSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SyncFiles.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
