--- a/VEEAM Test Task.csproj
+++ b/VEEAM Test Task.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ClassCreate.cs" />
     <Compile Include="DeleteControl.cs" />
+    <Compile Include="Logs.cs" />
     <Compile Include="MainSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncFiles.cs" />
